--- a/src/Modules/CrestApps.OrchardCore.Subscriptions/Views/SubscriptionFlowSteps.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.Subscriptions/Views/SubscriptionFlowSteps.cshtml
@@ -35,7 +35,7 @@
 
 <style at="Head">
     .breadcrumb-chevron {
-        --bs-breadcrumb-divider: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='%236c757d'%3E%3Cpath fill-rule='evenodd' d='M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z'/%3E%3C/svg%3E");
+        --bs-breadcrumb-divider: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='%236198754'%3E%3Cpath fill-rule='evenodd' d='m4.65,1.65 a0.5,0.5,0,0,1,0.708,0 l6,6 a0.5,0.5,0,0,1,0,0.708 l-6,6 a0.5,0.5,0,0,1,-0.708,-0.708 l10.293 l4.65,2.35 a0.5,0.5,0,0,1,0,-0.708 z'/%3E%3C/svg%3E");
         gap: .5rem;
     }
 
