--- a/src/Modules/CrestApps.OrchardCore.Subscriptions/Views/CreateUser.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.Subscriptions/Views/CreateUser.cshtml
@@ -16,12 +16,12 @@
 
 <div class="mb-3">
     <label asp-for="Password" class="form-label">@T["Password"]</label>
-    <input type="password" asp-for="Password" class="form-control" autocomplete="new-password" placeholder="@(Model.HasSavedPassword ? T["A password is securely stored. Provide a new one to replace it."]: T["Set a password for the admin account on the new site."])" />
+    <input type="password" asp-for="Password" class="form-control" autocomplete="new-password" placeholder="@(Model.HasSavedPassword ? T["A password is securely stored. Provide a new one to replace it."]: T["Set a password for your new account."])" />
     <span asp-validation-for="Password" class="text-danger"></span>
 </div>
 
 <div class="mb-3">
     <label asp-for="ConfirmPassword" class="form-label">@T["Confirm password"]</label>
-    <input type="password" asp-for="ConfirmPassword" class="form-control" autocomplete="new-password" placeholder="@(Model.HasSavedPassword ? T["A password is securely stored. Provide a new one to replace it."]: T["Set a password for the admin account on the new site."])" />
+    <input type="password" asp-for="ConfirmPassword" class="form-control" autocomplete="new-password" placeholder="@(Model.HasSavedPassword ? T["A password is securely stored. Provide a new one to replace it."]: T["Set a verification password for your new account."])" />
     <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
 </div>
