--- a/src/Modules/CrestApps.OrchardCore.Subscriptions/Views/SubscriptionPart.Edit.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.Subscriptions/Views/SubscriptionPart.Edit.cshtml
@@ -9,6 +9,12 @@
 </div>
 
 <div class="mb-3">
+    <label asp-for="InitialAmountDescription" class="form-label">@T["Initial Amount Description"]</label>
+    <input type="text" asp-for="InitialAmountDescription" class="form-control" />
+    <span asp-validation-for="InitialAmountDescription" class="text-danger"></span>
+</div>
+
+<div class="mb-3">
     <label asp-for="BillingAmount" class="form-label">@T["Billing Amount"]</label>
     <input type="number" min="0" step="0.01" asp-for="BillingAmount" class="form-control" />
     <span asp-validation-for="BillingAmount" class="text-danger"></span>
